--- a/mensajeria/servicios/templates/base.html
+++ b/mensajeria/servicios/templates/base.html
@@ -19,7 +19,7 @@
     <nav>
         <ul>
             <li><a href="{% url 'inicio' %}">Inicio</a></li>
-            <li><a href="#">Servicios</a></li>
+            <li><a href="{% url 'servicios' %}">Servicios</a></li>
             <li><a href="#">Quienes somos</a></li>
             <li><a href="#">Contacto</a></li>
             <li><a href="#">Login</a></li>
